RE-9-Fixing the pagination population issue, alignment issue, clean up

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Table Component/ManageRecommendationTable.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Table Component/ManageRecommendationTable.css
@@ -1,11 +1,34 @@
+    #table{
+    min-width: 850px;
+    }
+
+    #root{
+    min-width: 860px;
+    }
+
+    #grid{
+    width: 79%;
+    }
+
+    .primaryKey{
+        width: 200px;
+        margin-right: 20%;
+
+    }
+
+    #searchFont{
+        font-size: 15;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
     #title{
         margin-top: 20px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #252733;
     }
+    
     #subtitle{
         margin-top: 10px;
-        /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #868282;
         font-size: 13px;
@@ -13,22 +36,123 @@
 
     #filterBtn{
         color: #252733;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-transform: none;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 120px;
     }
     
     #recBtn{
+        background-color: #4DD3EF;
         float: right;
-        /* background-color: #4DD3EF ;
-        color: white;
-        font-size: 14px;
-        /* padding: 10px 60px; */
-        border-radius: 0px;
-        border-color: #4DD3EF;
-        /* margin: 10px 0px; */
-        cursor: pointer;
+        color: #FFFFFF;
         text-transform: none;
+        margin-bottom: 15px;
+        box-shadow: none;
+        height: 47px;
+        font-size: 12px;
+        padding: 6px 12px;
+        border: 6px solid;
+        line-height: 1.5;
+        border-color: #4DD3EF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     }
 
-    #table{
-        margin-top: 50px;
+    #recBtn:hover{
+            background-color: #3DB1C9;
+            border-color: #3DB1C9;
+            box-shadow: none;
     }
+
+    #recBtn:active{
+        box-shadow: none;
+        background-color: #3DB1C9;
+        border-color: #3DB1C9;
+    }
+
+    #tableHeader{
+        background-color: #FFFFFF;
+        color:  #687480;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+    }
+
+    #tableBody{
+        background-color: #FFFFFF;
+        color: #252733;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 12px;
+    }
+
+    .toolBarTitle{
+        flex: 1 1 100%;
+        margin-left: 10px;
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+    }
+
+    #visuallyHidden {
+        border: 0;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        position: absolute;
+        top: 20px;
+        width: 1px,
+    }
+
+    #paper{
+        width: 100%;
+        margin-bottom: 8px;
+        min-width: 850px;
+
+    }
+
+    #controlLabel {
+        color: #212529;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-transform: none;
+        margin-top: 5px;
+        font-size: 12px;
+        width: 20px;
+    }
+
+    .CssTextField {
+        width: 360px;
+        color: #252733;
+        font-size: 100px;
+    }
+    
+    .CssTextField.Mui-focused{
+        color: #868282
+    }
+
+    .CssTextField.MuiInput-underline:after{
+        border-bottom-color: #252733;
+    }
+
+    .CssTextField.MuiOutlinedInput-root{
+        border-bottom-color: #252733,
+    }
+    .CssTextField.MuiOutlinedInput-root.fieldset{
+        border-bottom-color: #252733,
+    }
+
+    .CssTextField.MuiOutlinedInput-root:hover fieldset{
+        border-bottom-color: #252733,
+    }
+
+    .cssTextField.MuiOutlinedInput-root.Mui-focused fieldset{
+        border-bottom-color: #252733,
+    }
+    
+
+
+
+
+
+
     
