--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/TopBar/TopBar.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/TopBar/TopBar.css
@@ -6,7 +6,7 @@
 }
 nav {
   border-bottom: 1px;
-  background-color:#C8C8C8;
+  background-color:#EDEDED;
   height: 35px;
 }
 .weather{
